tests/machine/x/st/map_membership.st
| m |
m := Dictionary newFrom: {'a' -> 1. 'b' -> 2}.
Transcript show: (('a' in m)) printString; cr.
Transcript show: (('c' in m)) printString; cr.
